tests/integration/libuild/errors/excess-attrs-in-schema/libuild.config.ts
export default {
  input: {
    index: './index.ts',
  },
  asdf: 'qwe',
};
